UI Top Menu This completes the top menu UI as well as the new left side menu UI. After fixing a number of small spacing and alignment errors, this also adds a progress bar, some color styling for the important attributes, and also adds icons to all of the components. This also gives a description for the strategy. This will eventually be removed from the game and perhaps introduced as a help button so that users do not feel overwhelmed with information.

--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -14,9 +14,9 @@ html {
 	margin: 0;
 }
 
-#my-canvas > canvas {
-   border-radius: 3px;
-   cursor: pointer;
+.game-container > canvas {
+   margin: 30px auto;
+   padding: 10px;
 }
 
 .user-interface {
@@ -38,7 +38,7 @@ html {
 	width: 38px;
 }
 
-.side-menu {
+.right-side-menu {
 	background-color: #ddd;
 	border: 1px solid #bbb;
 	border-radius: 3px;
@@ -47,10 +47,23 @@ html {
 	width: 150px;
 	font-size: 90%;
 	padding: 20px 20px 40px;
-	margin: 10px 0px 0px 0px;
+	margin: 40px 0px 0px 0px;
 }
 
-.side-menu-title {
+.left-side-menu {
+	background-color: #ddd;
+	border: 1px solid #bbb;
+	border-radius: 3px;
+	float: left;
+	text-align: center;
+	width: 150px;
+	font-size: 90%;
+	padding: 20px 20px 30px;
+	margin: 40px 10px 0px 0px;
+}
+
+.right-side-menu-title,
+.left-side-menu-title, {
 	width: 80%;
 	margin: 0 auto 10px;
 	padding: 10px;
@@ -58,21 +71,35 @@ html {
 	border: 1px dashed #777;
 }
 
+.color-order {
+	padding-top: 15px;
+}
+
+.help-block {
+	width: 15px;
+	height: 15px;
+	display: inline-block;
+	border: 1px solid #555;
+}
+
 .top-menu {
 	background-color: #ddd;
 	border: 1px solid #bbb;
 	border-radius: 3px;
-	padding: 20px;
+	padding: 10px;
+	margin-bottom: 10px;
 }
 
 .top-menu-title {
 	display: inline-block;
+	padding: 0;
+	margin: 10px;
 }
 
 #top-menu-avatar {
 	float: left;
 	color: #888;
-	width: 90px;
+	width: 85px;
 	height: 70px;
 	background-color: #bbb;
 	border: 1px solid #777;
@@ -100,6 +127,7 @@ html {
 
 .top-menu-left {
 	text-align: right;
+	padding-left: 50px;
 }
 
 .player-row {
@@ -107,13 +135,34 @@ html {
 	width: 300px;
 	padding: 10px;
 	display: inline-block;
-	background-color: rgba(137,200,110,0.4);
-	border: 1px solid rgba(137,200,110,0.9);
+	/*background-color: rgba(137,200,110,0.4);*/
+	background-color: #69fe5e;
+	border: 1px solid rgba(137,200,110,1);
+	
 	border-radius: 3px;
+}
+
+.progress-bar {
+	width: 600px;
+	height: 20px;
+	margin-left: 120px;
+	background-color: #ccc;
+	border: 1px solid #bbb;
+	border-radius: 3px;
+}
+
+.progress-bar-done {
+	display: inline-block;
+	/*background-color: rgba(137,200,110,0.4);*/
+	background-color: #69fe5e;
+	border-radius: 3px;
+	width: 30px;
+	height: 20px;
+	z-index: 9999;
 }
 
 .level-row {
 	display: inline-block;
 	padding: 5px;
-	width: 600px;
+	width: 640px;
 }
